# emulated_srs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
doc/: obstacle_classifier_launch.md  processing_unit_launch.md  sensing_unit_launch.md  tools.md
include/UFV/: RangeData.h
launch/: azure.launch  converter_xyz2pc2.launch  converter_xyzrgb2pc2.launch  eval2206.launch  exp2206.launch  makereg.launch  mot.launch  mot_RealSenseD435.launch  mot_realsense_d435.launch  obstacle_classifier.launch  obstacle_detector.launch  obstacle_detector_unregistered.launch  processing_unit.launch  sensing_unit.launch  vzense.launch
msg/: ClassifiedObstacle.msg  ClassifiedObstacleArray.msg  ExpSetup.msg  Obstacle.msg  ObstacleGroup.msg  ObstacleMultiArray.msg  SpectralTransmittance.msg  Transmittance.msg
scripts/: dummy_transmissometer.py  experimental_setup_broadcaster.py  mask_maker.py  mot_monitor.py  transmittance.py  transmittance_monitor.py  transmittance_publisher.py
src/: CMakeLists.txt  config.h.in  intensity_map.cpp  intensity_map.h  obstacle_classifier.cpp  obstacle_classifier.h  obstacle_detector.cpp  obstacle_detector.h  obstacle_detector_main.cpp  obstacle_detector_unregistered.cpp  obstacle_detector_unregistered.h  obstacle_measurer.cpp  obstacle_measurer.h  region_maker.cpp  region_maker.h  yolo_map.cpp  yolo_map.h
src/lib/: CMakeLists.txt  config.h.in
src/lib/include/: UFV.h  eSRS.h
src/lib/include/UFV/: CameraParam.h  ImageData.h  IntensityMap.h  RangeData.h  getopt.h  types.h  utils.h
src/lib/include/eSRS/: DepthMap.h  DetectionMap.h  Object.h  RangeData.h  YoloMap.h
src/lib/src/UFV/: CameraParam.cpp  ImageData.cpp  RangeData.cpp  utils.cpp
src/lib/src/eSRS/: ClassificationMap.cpp  DepthMap.cpp  DetectionMap.cpp  YoloMap.cpp
src/libeSRS/: CMakeLists.txt  config.h.in
src/libeSRS/UFV/: CameraParam.h  IntensityMap.cpp  RangeData.cpp  keydefs.h  types.h  utils.cpp  utils.h
src/libeSRS/eSRS/: ClassificationMap.h  DepthMap.h  DetectionMap.h  Object.h  RangeData.cpp  RangeData.h  YoloMap.cpp
src/util/: CMakeLists.txt  makeMask.cpp
srv/: SetMask.srv
