<?xml version="1.0"?>
<package format="2">
  <name>emulated_srs</name>
  <version>0.0.0</version>
  <description>A ROS package for obstacle detection emulating the architecture of
  Safety-Related Sensors (SRS) according to IEC TS 62998-1</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="y.sumi@aist.go.jp">Yasushi Sumi</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/cpp</url> -->
  <url type="website">http://github.com/yssmii/emulated_srs</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="y.sumi@aist.go.jp">Yasushi Sumi</author>
  <author email="kodama.masato@aist.go.jp">Masato Kodama</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <exec_depend>message_runtime</exec_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>roscpp</build_depend> -->
  <!-- <run_depend>roscpp</run_depend> -->
  
  <!-- <build_depend>actionlib_msgs</build_depend> -->
  <!-- <run_depend>actionlib_msgs</run_depend> -->

  <!-- <build_depend>std_msgs</build_depend> -->
  <!-- <run_depend>std_msgs</run_depend> -->

  <!-- <depend>image_transport</depend> -->
  <!-- <depend>cv_bridge</depend> -->
  <!-- <depend>nav_msgs</depend> -->

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
